[package]
name = "zipher"
version = "0.1.4"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pas2rust/zipher"
readme = "README.md"
exclude = [
    "tests/*",
    "tests",
    "main.rs"
]
categories = ["cryptography", "security"]
description = "Cryptography utilities and implementations including Argon2, bcrypt, post-quantum algorithms and JWT support"
keywords = ["cryptography", "argon2", "bcrypt", "post-quantum", "jwt"]
authors = ["pas2rust <pas2000@proton.me>"]
homepage = "https://github.com/pas2rust/zipher"
documentation = "https://docs.rs/zipher"

[dependencies]
# Always-included dependencies
regex = "1.11"
kenzu = "0.0"
mokuya = "0.0"
rand = "0.9" 

# Optional cryptography dependencies
chacha20poly1305 = { version = "0.10", optional = true, features = ["rand_core"] }
aes-gcm-siv = { version = "0.11", optional = true }
argon2 = { version = "0.5", optional = true }
hex = { version = "0.4", optional = true }
jsonwebtoken = { version = "9.3", optional = true }
serde = { version = "1.0", optional = true }
chrono = { version = "0.4", optional = true }
pqcrypto-mlkem = { version = "0.1", optional = true }
pqcrypto-mldsa = { version = "0.1", optional = true }
pqcrypto-traits = { version = "0.3", optional = true }
bcrypt = { version = "0.17", optional = true }


[features]
default = []

# Symmetric encryption
chacha20 = ["chacha20poly1305", "hex"]
aes = ["aes-gcm-siv", "hex"]

# Password hashing
argon2 = ["dep:argon2"]
bcrypt = ["dep:bcrypt"]

# JWT (JSON Web Tokens)
jwt = ["jsonwebtoken", "serde", "chrono"]

# Post-quantum cryptography
pqkem = ["pqcrypto-mlkem", "pqcrypto-traits"]
pqdsa = ["pqcrypto-mldsa", "pqcrypto-traits"]

# Enable all post-quantum features
postquantum = ["pqkem", "pqdsa"]

[dev-dependencies]
zipher = { path = ".", features = ["chacha20", "aes", "argon2", "jwt", "pqkem", "pqdsa", "bcrypt"] }
