[package]
name = "zipher"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pas2rust/zipher"
readme = "README.md"
exclude = [
    "tests/*",
    "tests",
    "main.rs"
]
categories = ["cryptography", "security"]
description = "Cryptography utilities and implementations including Argon2, bcrypt, post-quantum algorithms and JWT support"
keywords = ["cryptography", "argon2", "bcrypt", "post-quantum", "jwt"]
authors = ["pas2rust <pas2000@proton.me>"]
homepage = "https://github.com/pas2rust/zipher"
documentation = "https://docs.rs/zipher"

[dependencies]
# Always-included dependencies
regex = "1"
kenzu = "0.1.7"
rand = "0" 
# Optional cryptography dependencies
chacha20poly1305 = { version = "0", optional = true, features = ["rand_core"] }
aes-gcm-siv = { version = "0", optional = true }
argon2 = { version = "0", optional = true }
hex = { version = "0", optional = true }
#chrono = { version = "0", optional = true }
pqcrypto-mlkem = { version = "0", optional = true }
pqcrypto-mldsa = { version = "0", optional = true }
pqcrypto-traits = { version = "0", optional = true }
bcrypt = { version = "0", optional = true }
nekotracing = { version = "0", optional = true}

[features]
default = ["aes"]
tracing = ["nekotracing"]
# Symmetric encryption
chacha20 = ["chacha20poly1305", "hex"]
aes = ["aes-gcm-siv", "hex"]

# Password hashing
argon2 = ["dep:argon2", "hex"]
bcrypt = ["dep:bcrypt"]

# Post-quantum cryptography
pqkem = ["pqcrypto-mlkem", "pqcrypto-traits"]
pqdsa = ["pqcrypto-mldsa", "pqcrypto-traits"]

# Enable all post-quantum features
postquantum = ["pqkem", "pqdsa", "hex"]

full = ["chacha20", "aes", "argon2", "pqkem", "pqdsa", "bcrypt", "tracing"]

[dev-dependencies]
zipher = { path = ".", features = ["chacha20", "aes", "argon2", "pqkem", "pqdsa", "bcrypt"] }